# dotfiles

./: -f  .gitignore  .gitmodules  README.md  astrality.yml  context.yml  init.sh  modules.yml
archlinux/: aur_pkglist.txt  install_aur_packages.sh  install_i3_dependencies.zsh  install_notes.md  install_now_playing.zsh  install_pacman_packages.sh  ipython.zsh  pacman_pkglist.txt  scratchpads.zsh  setup_internet.zsh  toggle_i3_gaps.zsh
autoload/: aliases.zsh  completions.zsh  functions.zsh  giffer.sh  (+6 more)
home/dot_config/nvim/: dot_mise.toml  pyproject.toml  run_setup_nvim_venv.zsh
home/dot_config/nvim/.mise/: config.toml
home/dot_config/nvim/UltiSnips/: pandoc.snippets  plaintex.snippets
home/dot_config/nvim/ftplugin/: python.lua  sql.lua  zsh.lua
home/dot_config/nvim/lua/: behavior.lua  formatting.lua  keymaps.lua  visual.lua  vscode.lua
home/dot_config/nvim/lua/plugins/: blink_cmp.lua  chezmoi_nvim.lua  coc_nvim.lua  codecompanion_nvim.lua  conform_nvim.lua  copilot_lua.lua  copilot_vim.lua  fff_nvim.lua  fix_auto_scroll_nvim.lua  fzf_lua.lua  git_messeger_vim.lua  gitsigns_nvim.lua  gp_nvim.lua  gruvbox.lua  image_nvim.lua  init.lua  kulala_nvim.lua  lazydev_nvim.lua  mini_diff.lua  molten_nvim.lua  neo_tree_nvim.lua  neodev_nvim.lua  neogit.lua  neoman_vim.lua  neotest.lua  noice_nvim.lua  nvim_cmp.lua  nvim_comment.lua  nvim_coverage.lua  nvim_lsp_file_operations.lua  nvim_lspconfig.lua  nvim_spectre.lua  nvim_treesitter.lua  r_nvim.lua  rename.lua  render_markdown_nvim.lua  trouble_nvim.lua  vim_argumentative.lua  vim_caddyfile.lua  vim_carbon_now_sh.lua  (+6 more)
(+284 files in other folders)
